--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">OAuth2 Integration Web</string>
+    <string name="app_name">GitHub Kotlin</string>
 </resources>
